--- a/index.css
+++ b/index.css
@@ -40,6 +40,10 @@ body {
     min-height: 54px;
 }
 
+div.leftbox > div.buttons-top > button {
+    font-size: large;
+}
+
 button {
     display: inline-block;
     padding: 7px 5px 3px 5px;
