--- a/index.css
+++ b/index.css
@@ -183,7 +183,7 @@ input {
     height: 100%;
     overflow: scroll;
     padding: 1em;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
     white-space: pre;
 }
 
