--- a/index.css
+++ b/index.css
@@ -182,6 +182,7 @@ input {
     width: 100%;
     height: 100%;
     overflow: scroll;
+    margin: 0;
     padding: 1em;
     font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
     white-space: pre;
