Improve accessibility of buttons (remove images, add aria labels)

--- a/index.css
+++ b/index.css
@@ -40,7 +40,7 @@ body {
     min-height: 54px;
 }
 
-div.leftbox > div.buttons-top > button {
+div.leftbox > div.buttons-top button {
     font-size: large;
 }
 
