--- a/index.css
+++ b/index.css
@@ -46,7 +46,8 @@ div.leftbox > div.buttons-top button {
 
 button {
     display: inline-block;
-    padding: 7px 5px 3px 5px;
+    padding: 5px;
+    line-height: 1;
     margin: 2px 5px;
     cursor: pointer;
     outline: none;
